fixed dark mode colors, centered homepage text

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,8 @@
   --textCol2: #D3D3D3;
   --fontPrimary: 'Poppins', sans-serif;
   --loading-grey: #ededed;
-  --engineeringCard: #ffffff0a;
-  --engineeringCard-hover: #ffffff1a;
+  --engineeringCard: #ffffff1a;
+  --engineeringCard-hover: #ffffff3a;
   --engineeringSkill: #2dc7ff1a;
   --headshotCol: #2DC7FF;
 } */
@@ -104,7 +104,7 @@ li::marker {
 }
 .text-subtitle {
   font-size: 16px;
-  color: var(--fontPrimary);
+  color: var(--textCol1);
   font-family: var(--fontPrimary);
   margin-top: 1vw;
 }
@@ -134,6 +134,7 @@ li::marker {
   /* width: 50% !important; */
   min-width: 400px !important;
   height: 350px;
+  align-content: center;
 }
 .home-col1 {
   /* width: 50% !important; */
@@ -222,9 +223,9 @@ li::marker {
   border-radius: 30px !important;
   border: .1rem solid var(--secondaryCol) !important;
   padding: 5px;
-  font-size: 20px !important;
+  font-size: 16px !important;
   font-family: var(--fontPrimary) !important;
-  width: 100px;
+  width: 90px;
   margin-top: 5px;
   /* Transition Stuff */
   box-shadow: inset 0 0 0 0 var(--secondaryCol);
@@ -304,7 +305,7 @@ li::marker {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 .engineering-title {
   margin-top: 10px;
@@ -419,7 +420,7 @@ a, a:hover, a:focus, a:active {
   margin-bottom: 2rem;
   border: 2px solid;
   border-radius: 20px;
-  padding: 10px;
+  padding: 0 !important;
   border-color: var(--secondaryCol);
 }
 .project-loading-animation {
@@ -516,15 +517,16 @@ a, a:hover, a:focus, a:active {
   left: 0px;
   right: 0px;
   bottom: 0;
+  color: var(--textCol1);
   background-color: var(--primaryCol);
-  box-shadow: 0 0 20px 20px var(--primaryCol);
+  /* box-shadow: 0 0 20px 20px var(--primaryCol); */
 }
 .model-line {
   margin: auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
   width: 30rem;
-  color: black;
+  color: var(--textCol1);
 }
 
 /* Travel */
@@ -561,10 +563,10 @@ a, a:hover, a:focus, a:active {
   font-size: 25px;
   margin-left: 4.5vw;
   margin-right: 2rem;
+  transition: ease-in-out 300ms;
 }
 .navName:hover {
   color: var(--secondaryCol);
-  transition: 300ms;
 }
 .nav-hamburger{
   background-color: var(--hamburgerCol) !important;
@@ -583,10 +585,10 @@ a, a:hover, a:focus, a:active {
   font-size: 15px;
   margin-left: 2rem;
   margin-right: 2rem;
+  transition: ease-in-out 300ms;
 }
 .navElement:hover {
   color: var(--secondaryCol);
-  transition: 300ms;
 }
 .navButton {
   background-color: transparent !important;
